Fix control-icon rendering distorted

--- a/src/components/ControlIcon/ControlIcon.scss
+++ b/src/components/ControlIcon/ControlIcon.scss
@@ -9,40 +9,38 @@
 
     &::before {
       opacity: 1;
-      transform: scale(1, 1);
+      transform: scale3d(1.2, 1.2, 1);
     }
   }
 }
 
 .control-icon__icon {
-  z-index: 2;
-}
-.control__icon--button {
-  flex: 0 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  z-index: 2000;
 }
 .control__icon--disabled {
   opacity: 0.7;
   fill: #ccc;
 }
 .control__icon--button {
+  flex: 0 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   opacity: 0.7;
   position: relative;
 
   &::before {
-    content: '';
+    content: ' ';
     position: absolute;
-    height: calc(100% + 6px);
-    width: calc(100% + 6px);
+    height: 100%;
+    width: 100%;
     background: rgba(0, 0, 0, 0.1);
-    border-radius: 30px;
-    transform: scale(0.3, 0.3);
+    border-radius: 100%;
+    transform: scale3d(0.3, 0.3, 1);
     opacity: 0;
     transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
-    z-index: 1;
+    z-index: 1999;
   }
 }
 
